@@ -1,5 +1,9 @@
 2003-01-16  David Martin  <dmartina@excite.com>
 
+	* doc/mc.1.in: Add EXTernal virtual File System node (extfs).
+
+2003-01-16  David Martin  <dmartina@excite.com>
+
 	* doc/mc.1.in: Set man page header and footer.
 	* doc/es/mc.1.in: Likewise.
 	* doc/hu/mc.1.in: Likewise.
